--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,3 +1,7 @@
+@import "bower_components/bootstrap/less/bootstrap.less";
+
+@icon-font-path: "/components/bootstrap/fonts/";
+
 body {
     padding-top: 25px;
 }
