--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
 
     <title>Vacaciones Permanentes</title>
-    <link href="/components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/stylesheets/style.css" rel="stylesheet">
+    <link href="/stylesheets/style.min.css" rel="stylesheet">
 
     <script src="/components/angular/angular.min.js"></script>
     <script src="/components/ui-router/release/angular-ui-router.min.js"></script>
