Agregado las fechas de arribo y de partida

--- a/public/templates/viajes/form.html
+++ b/public/templates/viajes/form.html
@@ -14,7 +14,12 @@
             </span>
         </span>
     </div>
+
+
+
 </div>
+
+<div ng-include="'/templates/datepicker.html'"></div>
 
 <div class="row">
     <div class="col-md-1">
