--- a/public/templates/viajes/new.html
+++ b/public/templates/viajes/new.html
@@ -9,5 +9,13 @@
 
         <ng-include src="'/templates/viajes/form.html'"></ng-include>
 
+        <div class="row">
+		    <div class="col-md-1">
+		        <button class="btn btn-success">
+		            Guardar
+		        </button>
+		    </div>
+		</div>
+		
     </form>
 </div>
