Campos requeridos en Viaje. Detalles visuales.

--- a/public/templates/datepicker.html
+++ b/public/templates/datepicker.html
@@ -1,6 +1,6 @@
 <div ng-controller="DatepickerDemoCtrl">
 
-    <label for="nombre">Fecha de Arribo</label>
+    <label for="fechaDeArribo">Fecha de Arribo</label>
     <div class="row">
         <div class="col-md-6">
             <p class="input-group">
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <label for="nombre">Fecha de Partida</label>
+    <label for="fechaDePartida">Fecha de Partida</label>
     <div class="row">
         <div class="col-md-6">
             <p class="input-group">
