--- a/public/templates/viajes/list.html
+++ b/public/templates/viajes/list.html
@@ -25,12 +25,12 @@
             <span>{{viaje.nombre}}</span>
         </div>
         <div class="col-md-2">
-            <a class="btn btn-info" ui-sref="viajes.edit({ id: viaje._id })">
+            <a class="btn btn-info btn-xs btn-block" ui-sref="viajes.edit({ id: viaje._id })">
                 Editar
             </a>
         </div>
         <div class="col-md-2">
-            <button class="btn btn-danger btn-m"
+            <button class="btn btn-danger btn-xs"
                     ng-click="open(viaje._id)">
                 Eliminar
             </button>
