--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,15 @@
 
     <script src="/components/jquery/dist/jquery.min.js"></script>
     <script src="/components/angular/angular.min.js"></script>
+    <script src="/components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
     <script src="/components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="/components/moment/min/moment.min.js"></script>
-    <script src="/components/moment/locale/es.js"></script>
-    <script src="/components/angular-moment/angular-moment.min.js"></script>
 
+    <script src="/javascripts/config-run.js"></script>
+    <script src="/javascripts/controllers.js"></script>
+    <script src="/javascripts/directives.js"></script>
+    <script src="/javascripts/factories.js"></script>
     <script src="/javascripts/angularApp.js"></script>
 
     <style>
