--- a/public/templates/viajes/form.html
+++ b/public/templates/viajes/form.html
@@ -114,7 +114,7 @@
             <div class="form-group input-group-sm">
                 <label for="logitud">Longitud</label>
                 <input type="number" step="any" class="form-control" id="logitud" name="logitud"
-                       ng-model="destino.hospedaje.coordenadass[0]" required>
+                       ng-model="destino.hospedaje.coordenadas[0]" required>
             </div>
             <span class="error" ng-show="formElement.logitud.$dirty && formElement.logitud.$invalid">
                 <span ng-show="formElement.logitud.$error.required">
@@ -126,7 +126,7 @@
             <div class="form-group input-group-sm">
                 <label for="latitud">Latitud</label>
                 <input type="number" step="any" class="form-control" id="latitud" name="latitud"
-                       ng-model="destino.hospedaje.coordenadass[1]" required>
+                       ng-model="destino.hospedaje.coordenadas[1]" required>
             </div>
             <span class="error" ng-show="formElement.latitud.$dirty && formElement.latitud.$invalid">
                 <span ng-show="formElement.latitud.$error.required">
