--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,17 @@
     <title>Vacaciones Permanentes</title>
     <link href="/stylesheets/style.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="/components/angular-google-places-autocomplete/src/autocomplete.css">
+
     <script src="/components/jquery/dist/jquery.min.js"></script>
     <script src="/components/angular/angular.min.js"></script>
     <script src="/components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
     <script src="/components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <script src="/components/angular-google-places-autocomplete/src/autocomplete.js"></script>
 
     <script src="/javascripts/config-run.js"></script>
     <script src="/javascripts/controllers.js"></script>
