--- a/public/templates/viajes/form.html
+++ b/public/templates/viajes/form.html
@@ -20,12 +20,12 @@
 
     <hr>
 
-    <div class="row">
+    <div class="row" ng-controller="DestinoCtrl">
         <div class="col-md-12">
             <div class="form-group input-group-sm">
                 <label for="ciudad">Ciudad</label>
                 <input type="text" class="form-control" autofocus="true" id="ciudad" name="ciudad"
-                       g-places-autocomplete force-selection="true" options="cityOptions"
+                       g-places-autocomplete force-selection="true"
                        ng-model="destino.ciudad" required ng-minlength=3>
             </div>
             <span class="error" ng-show="formElement.ciudad.$dirty && formElement.ciudad.$invalid">
@@ -100,7 +100,7 @@
             <div class="form-group input-group-sm">
                 <label for="hospedaje_nombre">Hospedaje</label>
                 <input type="text" class="form-control" autofocus="true" id="hospedaje_nombre" name="hospedaje_nombre"
-                       g-places-autocomplete force-selection="true" options="hotelOptions"
+                       g-places-autocomplete force-selection="true"
                        ng-model="destino.hospedaje.nombre" required ng-minlength=3>
             </div>
             <span class="error" ng-show="formElement.hospedaje_nombre.$dirty && formElement.hospedaje_nombre.$invalid">
